@@ -1,3 +1,9 @@
+2009-09-18 Alexandru Csete <oz9aec at gmail.com>
+
+    * src/gtk-sat-selector.[ch]:
+    Implemented satellite group selector.
+
+
 2009-08-23 Alexandru Csete <oz9aec at gmail.com>
 
     * src/gtk-sat-selector.[ch]:
